[gd_scene load_steps=5 format=2]

[ext_resource path="res://level/TowerSpot.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.984314, 0.694118, 0.0117647, 1 )

[sub_resource type="BoxShape" id=3]

[node name="TowerSpot" type="MeshInstance"]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 1, 0, 2.08757, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )
script = ExtResource( 1 )

[node name="Area" type="Area" parent="."]
input_capture_on_drag = true
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1.5, 0, 0, 0, 1, 0, 0, 0, 1.5, 0, 0, 0 )
shape = SubResource( 3 )

[connection signal="input_event" from="Area" to="." method="_on_input_event"]
[connection signal="mouse_entered" from="Area" to="." method="_on_entered"]
[connection signal="mouse_exited" from="Area" to="." method="_on_exit"]
